fix wrap

--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -127,7 +127,7 @@ input[type=checkbox]:checked+label .checkbox::after {
 }
 
 .wrap{
-	width: 73.611%;
+	width: 100%;
 	max-width: 1060px;
 	margin: 0 auto;
 	padding: 0 10px;
